Add system snapshot function